assets/css/style.css
---
layout: Stylesheet
---

@import "/assets/css/highlight.css";
/* Containers: Body, Container, Box, Main, Header, Content */ 

html, html[data-theme="light"] {
    --bg-main: #FFFFFF;
    --bg-sub: #FAFAFC;
    --color-bis: #363636;
    --text-main: #18181C;
    --text-sub: #5D5D67;
    --link: #2380ED;
    --border: #E5E5E5;
}

html[data-theme="dark"] {
    --bg-main: #18181C;
    --bg-sub: #262626;
    --color-bis: #E6E6E6;
    --text-main: #FAFAFC;
    --text-sub: #FFFFFF;
    --link: #6D9EFF;
    --border: #353535;
}


@media (prefers-color-scheme: dark) {
    html, html[data-theme="dark"] {
        --bg-main: #18181C;
        --bg-sub: #262626;
        --text-main: #FAFAFC;
        --text-sub: #FFFFFF;
        --link: #6D9EFF;
        --border: #353535;
    }

    html[data-theme="light"] {
	    --bg-main: #FFFFFF;
        --bg-sub: #FAFAFC;
        --text-main: #18181C;
        --text-sub: #5D5D67;
        --link: #2380ED;
        --border: #E5E5E5;
  } 
}


html {
    scroll-behavior: smooth;
}

body {
    counter-reset: sidenote-counter; 
}

.container {
    display: flex;    
    position: relative;         
    flex-direction: column;     
    justify-content: center;
    position: absolute;
    top: 0px;  
    left: 0px;
    right: 0px;
    bottom: 0px;  
    align-items: center;       
    max-width: 1100px;
    margin-right: auto;
    margin-left: auto;
}

.box {
    border-left: 1px solid var(--primary-border-color);
    border-right: 1px solid var(--primary-border-color);
    border-bottom: 1px solid var(--primary-border-color);
    width: 60%;
    position: absolute;
    top: 0px;
}

header {
    display: flex;
    flex-direction: column;
}

main {
    min-height: 300px;
}

.buttons.for-back-home:not(:last-child) {
    margin-left: 0;
    margin-bottom: 1rem;
}

.navbar-item.navbar-dark-mode__mobile {
    flex-grow: 1;
    justify-content: flex-end;
}

@media screen and (min-width: 768px) {
    .buttons.for-back-home:not(:last-child) {
        margin-left: 2rem;
    } 
}

/* Phrasing Style: H1, H2, H3, H4, H5, H6, P, A, UL, LI */


/* Titles using major third
.title.is-1, .is-size-1 {
    font-size: $size-1; //39.06px
    font-weight: $weight-semibold;
}
.title.is-2, .is-size-2 {
    font-size: $size-2; //31.25px
    font-weight: $weight-semibold;
}
.title.is-3, .is-size-3 {
    font-size: $size-3; //25.00px
    font-weight: $weight-semibold;
}
.title.is-4, .is-size-4 {
    font-size: $size-4; //20.00px
    font-weight: $weight-semibold;
}
.title.is-5, .is-size-5 {
    font-size: $size-5; //20.00px
    font-weight: normal;
}
.title.is-6, .is-size-6 {
    font-size: $size-6; //16px
    font-weight: $weight-semibold;
}
.is-para {
    font-size: $size-6; //16px
    font-weight: normal;
}
.is-para-small, .is-size-7 {
    font-size: $size-7; //12.80px
    font-weight: normal;
}
.is-title-uppercase {
    font-size: $size-7; //12.80px
    font-weight: $weight-semibold;
    text-transform: uppercase;
    color: $text-sub;
    margin-bottom: 8px;
    letter-spacing: 0.2em;
}
*/

/* Minor third with base font 14px */
h1 {
    font-size: 2.074rem;
    font-weight: 600;
}

h2 {
    font-size: 1.728rem;
    font-weight: 600;
}

h3 {
    font-size: 1.44rem;
    font-weight: 600;
}

h4 {
    font-size: 1.2rem;
    font-weight: 600;
}

h5 {
    font-size: 1.2rem;
    font-weight: 400;
}

h6 {
    font-size: 1rem;
    font-weight: 600;
}


/* Major third with base font 16px */
@media screen and (min-width: 769px), print {
    html {
        font-size: 16px !important; 
    }
    h1 {
        font-size: 2.441rem;
        font-weight: 600;
    }

    h2 {
        font-size: 1.953rem;
        font-weight: 600;
    }

    h3 {
        font-size: 1.563rem;
        font-weight: 600;
    }

    h4 {
        font-size: 1.25rem;
        font-weight: 600;
    }

    h5 {
        font-size: 1.25rem;
        font-weight: 400;
    }

    h6 {
        font-size: 1rem;
        font-weight: 600;
    }
}

h1, h2, h3, h4, h5, h6 {
    margin: 0;
    font-family: 'IBM Plex Sans', sans-serif;
}

p a,
ul a,
li a,
td a,
th a,
h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a,
span a,
div a,
ol a,
blockquote a,
cite a {
    font-size: inherit;
    font-family: inherit;
    color: inherit;
}

ul ul {
    list-style-type: disc;
}

b, strong {
    font-weight: 600;
}


/* Figures, Images, Code, Blockquotes, Tables */

img {
    max-width: 100%;
    height: auto;
}


code {
    font-family: Consolas, 'Courier New', Courier, monospace;
    display: inline-block;
    overflow: auto !important;
    white-space: pre-line !important;       
    word-wrap: break-word !important;       
    padding: 2px 2px  2px 2px;
    vertical-align:middle;
    padding: 2px 2px 2px 2px;
    border: 1px solid var(--secondary-border-color);
    border-radius: 4px;
}

.regular-sans code {
    padding: 20px;
    background-color: var(--bg-sub);
    border-radius: 5px;
    border: none;
}

.serif code {
    padding: 20px;
    background-color: var(--bg-sub);
    border-radius: 5px;
    border: none;
}


pre code {
    font-family: Consolas, 'Courier New', Courier, monospace;
    display: inline-block;
    overflow: auto !important;
    white-space: pre-line !important;       
    word-wrap: break-word !important;       
    padding: 15px 15px  15px 15px;
    vertical-align:middle;
    width: 90%;
    background-color: var(--bg-sub);
    border: 1px solid var(--secondary-border-color);
    border-radius: 5px;
    color: var(--text-main);
}


blockquote:before {
  display: none;
}

blockquote {
    padding: 10px;
}


summary {
  display: flex;
  align-items: center;
  outline: none;
}

cite {
    padding-left: 50px;
    font-style: oblique;
}

blockquote p {
    font-family: inherit;
    font-size: 15px;
}

table {
    border-radius: 5px;
}

th, td {
    color: var(--text-main);
    padding: 8px;
    text-align: left;
    font-size: 12px;
}

td {
   font-size: 14px;
}

td a {
    color: inherit;
    text-decoration: none;
}
/* ... */

